Add release notes to the template.nuspec
Squirrel.Windows supports to have releaseNotes in the nuget package for update

--- a/template.nuspec
+++ b/template.nuspec
@@ -10,6 +10,7 @@
     <requireLicenseAcceptance>false</requireLicenseAcceptance>
     <description><%- description %></description>
     <copyright><%- copyright %></copyright>
+    <releaseNotes><%- releaseNotes %></releaseNotes>
   </metadata>
   <files>
     <file src="locales\**" target="lib\net45\locales" />
